--- a/myportfolio/myapp/templates/home.html
+++ b/myportfolio/myapp/templates/home.html
@@ -11,7 +11,6 @@
 
 
 
- 
 </head>
 
 <body>
@@ -21,7 +20,7 @@
                 <div class="row align-items-center position-relative">
                     <div class="col-lg-9">
                         <div class="slider_text">
-                            <h3>Hi, I'm Alex <br>
+                            <h3>Hi, I'm Pulkit <br>
                                 <span>Design student</span></h3>
                         </div>
                     </div>
@@ -46,8 +45,15 @@
                     <div class="download_left">
                         <p>It's my dream to work for people and make great designs for them.
                         </p>
-                        <p>I've an experience of 6+ years and use variety of tools for my designs. </p>
-                        <a href="#" class="boxed-btn3-line">Download CV</a>
+                        <h2 style="color: orange;">My Qualifications </h2> <br>
+                        <h5 style="color: white;">BACHELOR OF DESIGN </h5>
+                        <p>Delhi Technological University
+                        </p>
+                         <br>
+                        <h5 style="color: white;">HIGH SCHOOL (SCIENCES) </h5>
+                        <p>Dream High Public School
+                        </p>
+
                     </div>
                 </div>
                 <div class="col-lg-5 offset-lg-1 col-md-6">
@@ -73,12 +79,32 @@
                         <div class="single_progress">
                                 <div class="label d-flex justify-content-between">
                                         <span>Adobe</span>
-                                        <span>45%</span>
+                                        <span>60%</span>
                                     </div>
                                 <div class="progress">
-                                        <div class="progress-bar" role="progressbar" style="width: 45%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                        <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                                       </div>
                         </div>
+
+                        <div class="single_progress">
+                            <div class="label d-flex justify-content-between">
+                                    <span>Leadership</span>
+                                    <span>80%</span>
+                                </div>
+                            <div class="progress">
+                                    <div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                  </div>
+                    </div>
+
+                    <div class="single_progress">
+                        <div class="label d-flex justify-content-between">
+                                <span>ML and AI</span>
+                                <span>75%</span>
+                            </div>
+                        <div class="progress">
+                                <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                              </div>
+                </div>
                     </div>
                 </div>
             </div>
@@ -91,7 +117,7 @@
             <div class="row">
                 <div class="col-xl-12">
                     <div class="section_title mb-50">
-                        <h3>My Services</h3>
+                        <h3>I do provide freelance services!</h3>
                     </div>
                 </div>
             </div>
@@ -124,7 +150,7 @@
                             <img src="/static/img/svg_icon/3.svg" alt="">
                         </div>
                         <h3>
-                                Adobe Illustrations
+                                Adobe Illustrator
                         </h3>
                        
                     </div>
@@ -141,7 +167,7 @@
             <div class="row">
                 <div class="col-xl-12">
                     <div class="section_title mb-50">
-                        <h3>Some of my works</h3>
+                        <h3>Some of my projects</h3>
                     </div>
                 </div>
             </div>
